# nrf-mdk

./: CMakeLists.txt  LICENSE  readme.md
cmake/: mdkDependentOptionList.cmake  paths.cmake  target.cmake  toolchain.cmake
cmake/modules/: cmsis_core-config.cmake  mdk-config.cmake
cmake/toolchain/: armcc.cmake  armclang.cmake  armclang_override.cmake  clang.cmake  gcc.cmake  get_target_paths.cmake
example/: CMakeLists.txt  main.c
extras/: nrf54h20_enga_flpr.svd  nrf54h20_enga_ppr.svd  nrf54l15_enga_application.svd  nrf54l15_enga_flpr.svd
include/: haltium_interim.h  nrf.h  nrf51.h  nrf52.h  nrf52805.h  nrf52810.h  nrf52811.h  nrf52820.h  nrf52833.h  nrf52840.h  nrf52_erratas.h  nrf5340_application.h  nrf5340_network.h  nrf54h20_application.h  nrf54h20_application_peripherals.h  nrf54h20_enga_application.h  nrf54h20_enga_application_peripherals.h  nrf54h20_enga_flpr.h  nrf54h20_enga_flpr_peripherals.h  nrf54h20_enga_global.h  nrf54h20_enga_ppr.h  nrf54h20_enga_ppr_peripherals.h  nrf54h20_enga_radiocore.h  nrf54h20_enga_radiocore_peripherals.h  nrf54h20_enga_version.h  nrf54h20_flpr.h  nrf54h20_flpr_peripherals.h  nrf54h20_global.h  nrf54h20_interim.h  nrf54h20_ppr.h  nrf54h20_ppr_peripherals.h  nrf54h20_radiocore.h  nrf54h20_radiocore_peripherals.h  nrf54h20_version.h  nrf54l15_enga_application.h  nrf54l15_enga_application_peripherals.h  nrf54l15_enga_flpr.h  nrf54l15_enga_flpr_peripherals.h  nrf54l15_enga_global.h  nrf54l15_enga_interim.h  (+9 more)
linker_scripts/: iar_nrf51422_xxaa.icf  iar_nrf51801_xxab.icf  iar_nrf51822_xxab.icf  iar_nrf51822_xxac.icf  iar_nrf52810_xxaa.icf  iar_nrf52820_xxaa.icf  iar_nrf52832_xxaa.icf  iar_nrf52833_xxaa.icf  iar_nrf52840_xxaa.icf  iar_nrf5340_xxaa_application.icf  iar_nrf5340_xxaa_network.icf  iar_nrf54h20_enga_xxaa_application.icf  iar_nrf54h20_enga_xxaa_flpr.icf  iar_nrf54h20_enga_xxaa_ppr.icf  iar_nrf54h20_enga_xxaa_radiocore.icf  iar_nrf54h20_xxaa_application.icf  iar_nrf54h20_xxaa_flpr.icf  iar_nrf54h20_xxaa_ppr.icf  iar_nrf54h20_xxaa_radiocore.icf  iar_nrf54l15_enga_xxaa_application.icf  iar_nrf54l15_enga_xxaa_flpr.icf  iar_nrf9120_xxaa.icf  nrf54h20_xxaa_application.ld  nrf54h20_xxaa_flpr.ld  nrf54h20_xxaa_ppr.ld  nrf54h20_xxaa_radiocore.ld  ses_nrf51822_xxaa.icf  ses_nrf52811_xxaa.icf  ses_nrf52840_xxaa.icf  ses_nrf5340_xxaa_application.icf  ses_nrf5340_xxaa_network.icf  ses_nrf54h20_enga_xxaa_flpr.icf  ses_nrf54h20_enga_xxaa_radiocore.icf  ses_nrf54h20_xxaa_application.icf  ses_nrf54h20_xxaa_flpr.icf  ses_nrf54h20_xxaa_radiocore.icf  ses_nrf54l15_enga_xxaa_application.icf  ses_nrf54l15_enga_xxaa_flpr.icf
src/: main.c  startup_nrf_common.c  system_nrf54l.c  systick.cpp
